# SMFS-QE

./: README.md  Semantic File Segment.sfs
SMFS-QE/: Cargo.toml
SMFS-QE/scr/: lib.rs
