[package]
name = "smfs_qe"
version = "0.2.0"
edition = "2021"

[dependencies]
indexmap = "2.2"
thiserror = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"], optional = true }

# — необязательные плагины, включай фичами:
zstd = { version = "0.13", optional = true }        # сжатие
lz4_flex = { version = "0.11", optional = true }    # быстрое сжатие
chacha20poly1305 = { version = "0.10", optional = true }  # AEAD (EIME-заглушка)

[features]
default = []
compress-zstd = ["zstd"]
compress-lz4 = ["lz4_flex"]
eime-chacha = ["chacha20poly1305"]
serde = ["dep:serde"]
